AWS/RDS/Policies/rds-instance-public-access-check.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  creationTimestamp: null
  name: rds-instance-public-access-check
spec:
  rules:
    - exclude:
        resources: {}
      generate:
        clone: {}
        cloneList: {}
      match:
        resources:
          kinds:
            - RDSInstance
      mutate: {}
      name: rds-instance-public-access-check
      validate:
        message: rds instance public access must be set to false. Set spec.forProvider.publiclyAccessible.
        pattern:
          spec:
            forProvider:
              publiclyAccessible: false
  validationFailureAction: enforce
status:
  autogen: {}
  ready: false
  rulecount:
    generate: 0
    mutate: 0
    validate: 0
    verifyimages: 0
